# EEMapper

./: .gitignore  .pre-commit-config.yaml  README.md  postproc_2025.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: irrmapper_v1_2.toml
docs/: provenance.md  reproducibility.md
irrmapper/: auth.py  cli.py  config.py
irrmapper/assets/: __init__.py  ops.py
irrmapper/data/: county_acres.csv  state_county_code.csv  state_county_codes.py  states.csv
irrmapper/features/: names.py  stack.py
irrmapper/ingest/: climate.py  landsat.py
irrmapper/models/: rf_ee.py  rf_sklearn.py
irrmapper/postproc/: __init__.py  exports.py  legacy.py  rasters.py
irrmapper/sampling/: extracts.py  points.py  shape_ops.py  tables.py
irrmapper/validation/: reduce.py
legacy/: assets_cli.py  ee_analysis.py  figures.py  nass_data.py  pixel_metrics.py  statewise.py  zonal.py
map/: __init__.py  assets.py  call_ee.py  cdl.py  cdl_key.py  climate_finder.py  code_editor_notes  concatenate.py  config.py  convert.py  distribute_points.py  ee_analysis.py  ee_patches.py  ee_utils.py  extract_bands.py  figures.py  merge_shp.py  models.py  modis.py  nass_analysis.py  nass_data.py  pixel_metrics.py  postproc.py  results_notes.txt  runner.py  sample_points.py  shape_ops.py  shapefile_meta.py  split_shapefiles.py  state_county_codes.py  statewise.py  tables.py  variable_importance.py  wetlands.py  zonal.py
map/data/: bucket.py  build_tif.py  extract_data.py  irr_shards.json  master_shards.json  pse_preparation.py  write_npy.py  write_tif.py
map/dcm/: __init__.py  dcm.py  dcm_helper.py  dcm_model.py  utils.py
map/openet/: __init__.py  collection.py  collection_interpolate.ipynb  common.py  image.py  inerpolate.py  landsat.py  utils.py
map/trainer/: config.py  extract_data.py  extract_utils.py  feature_spec.py  shapefile_meta.py  train_model.py  training_utils.py  utils.py
provenance/: IrrMapperComp_metadata.csv  IrrMapper_sw_metadata.csv  archive_training_tables.py  harvest_asset_metadata.py  training_table_archive_09MAY2023.json  version1_2_metadata.csv
tests/: conftest.py  test_cdl_unpack.py  test_distribute_points.py  test_export_special_expressions.py  test_gate2_graph_parity.py  test_manifest_stamping.py  test_models.py  test_postproc_config_equivalence.py  test_runner.py  test_shape_ops.py  test_stack_bands_graph.py  test_state_county_codes.py  test_tables.py
training_redevelopment/: __init__.py  combined_classifier.py  combined_dataset.py  get_files.py  infer_modern_points.py  mlp_classifier.py  ndvi_export.py  process_ndvi.py  redevelop_training_data.py  statewise.py  unet.py  update_classifier.py
(+138 files in other folders)
