[project]
name = "irrmapper"
version = "0.1.0"
description = "Irrigated lands mapping with Earth Engine and Random Forest classification"
license = "Apache-2.0"
requires-python = ">=3.10"

dependencies = [
    "earthengine-api",
    "fiona",
    "geopandas",
    "matplotlib",
    "numpy",
    # pandas 3.0 Copy-on-Write silently breaks the chained-assignment class
    # remaps in tables.py; stay on 2.x until those paths are rewritten (Phase 2)
    "pandas>=2,<3",
    "rasterstats",
    "scikit-learn",
    "scipy",
    "shapely",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
ml = [
    "torch",
    "pytorch-lightning",
    "torchmetrics",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ee: requires authenticated Earth Engine credentials (skipped in CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["map"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
