[project]
name = "irrmapper"
version = "0.1.0"
description = "Irrigated lands mapping with Earth Engine and Random Forest classification"
license = "Apache-2.0"
requires-python = ">=3.10"

dependencies = [
    "earthengine-api",
    "fiona",
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas>=2",
    "rasterstats",
    "scikit-learn",
    "scipy",
    "shapely",
    "tomli; python_version < '3.11'",
]

[project.scripts]
irrmapper = "irrmapper.cli:main"

[project.optional-dependencies]
ml = [
    "torch",
    "pytorch-lightning",
    "torchmetrics",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ee: requires authenticated Earth Engine credentials (skipped in CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["irrmapper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
